# bods-ftm

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: sample_bods.json  sample_ftm.jsonl
src/bods_ftm/: cli.py  config.py
src/bods_ftm/bods_to_ftm/: converter.py  entity_mapper.py  identifier_mapper.py  person_mapper.py  relationship_mapper.py
src/bods_ftm/ftm_to_bods/: converter.py  entity_mapper.py  identifier_mapper.py  person_mapper.py  relationship_mapper.py
src/bods_ftm/utils/: dates.py  ids.py  statements.py
tests/: conftest.py  test_bods_fixtures_conformance.py  test_bods_to_ftm.py  test_ftm_to_bods.py  test_roundtrip.py
