[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bods-ftm"
version = "0.1.0"
description = "Bidirectional converter between Beneficial Ownership Data Standard (BODS) v0.4 and the FollowTheMoney data model used by OpenSanctions and OpenAleph"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Stephen Abbott Pugh"},
]
dependencies = [
    "click>=8.1",
    "followthemoney>=3.5",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "bods-v04-fixtures>=0.1.1,<0.2",
    "pytest-bods-v04-fixtures>=0.1.1,<0.2",
]

[project.scripts]
bods-ftm = "bods_ftm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
